; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_config_roms.c_hpsb_init_config_roms.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_config_roms.c_hpsb_init_config_roms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 (...)* }

@config_rom_entries = common dso_local global %struct.TYPE_3__** null, align 8
@.str = private unnamed_addr constant [43 x i8] c"Failed to initialize config rom entry `%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hpsb_init_config_roms() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %28, %0
  %4 = load i32, i32* %1, align 4
  %5 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @config_rom_entries, align 8
  %6 = call i32 @ARRAY_SIZE(%struct.TYPE_3__** %5)
  %7 = icmp slt i32 %4, %6
  br i1 %7, label %8, label %31

8:                                                ; preds = %3
  %9 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @config_rom_entries, align 8
  %10 = load i32, i32* %1, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %9, i64 %11
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i64 (...)*, i64 (...)** %14, align 8
  %16 = call i64 (...) %15()
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %8
  %19 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @config_rom_entries, align 8
  %20 = load i32, i32* %1, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %19, i64 %21
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @HPSB_ERR(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %25)
  store i32 -1, i32* %2, align 4
  br label %27

27:                                               ; preds = %18, %8
  br label %28

28:                                               ; preds = %27
  %29 = load i32, i32* %1, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %1, align 4
  br label %3

31:                                               ; preds = %3
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @ARRAY_SIZE(%struct.TYPE_3__**) #1

declare dso_local i32 @HPSB_ERR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
